# spatial-competition-pettingzoo

./: .mise.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  hotelling_model.py  hotelling_qlearning.py  hotelling_random.py  spatial_competition_2d.py  spatial_competition_3d.py  stress_test_10d.py
spatial_competition_pettingzoo/: action.py  buyer.py  competition.py  competition_space.py  distributions.py  enums.py  environment.py  observation.py  position.py  renderer.py  seller.py  topology.py  utils.py  view_scope.py
tests/: __init__.py  conftest.py  test_buyer.py  test_competition.py  test_competition_space.py  test_distributions.py  test_observation.py  test_position.py  test_sample.py  test_seller.py  test_utils.py  test_view_scope.py
